--- a/templates/create.html
+++ b/templates/create.html
@@ -1,202 +1,186 @@
+{% extends "layout.html" %}
 {% from "_macros.html" import nav %}
-<!doctype html>
-<html>
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Create</title>
-	<script src="https://code.jquery.com/jquery-3.3.1.js"
-	  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-	  crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+{% block title %}NYC Parks Database – Create{% endblock %}
+{% block content %}
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-	
-
-	<link rel="stylesheet" href="../static/css/style.css">
-	<!-- <script src="../static/js/create.js"></script> -->
-</head>
-<body>
-<div class="container">
-	{{ nav() }}
-	<div class="form_please">
-		<form id="form_create" action="{{ url_for('create') }}" method="post">
-		<div class="head">
-		<h1>
-			<label for="create_item">New</label> 
-			<select id="create_type" name="create_item">
-				<option value="" disabled selected></option>
-				<option value="exhibition">Exhibition</option>
-				<option value="artwork">Artwork</option>
-				<option value="artist">Artist</option>
-				<option value="park">Park</option>
-				<option value="event">Event</option>
-				<option value="organization">Organization</option>
-				<option value="organizer">Organizer</option>
-				<option value="employee">Employee</option>
-			</select>
-		</h1>
-		</div>
-		<div id="create_exhibition" class="create_div">
-			<h2>Exhibition</h2>
-			<div class="bio">
-				<h3>Bio</h3>
-				<ul>
-					<li><label for="exh_name">Name</label> <input type="text" name="exh_name"></li>
-					<li><label>Exhibition Dates</label> <input type="date" name="exh_startDate"> to <input type="date" name="exh_endDate"></li>
-				</ul>
-				<h3>Organizations</h3>
-				<button type="button" id="createModal_org" class="org_create btn-reg" data-toggle="modal" data-target="#modal_org">Create</button> <button id="add_org" type="button" class="btn-edit org_add">+</button>
-				<ul class="ul_org">
-					{% include "include/org_list.html" ignore missing with context %}
-				</ul>
+	<div class="container">
+		{{ nav() }}
+		<div class="form_please">
+			<form id="form_create" action="{{ url_for('create') }}" method="post">
+			<div class="head">
+			<h1>
+				<label for="create_item">New</label> 
+				<select id="create_type" name="create_item">
+					<option value="" disabled selected></option>
+					<option value="exhibition">Exhibition</option>
+					<option value="artwork">Artwork</option>
+					<option value="artist">Artist</option>
+					<option value="park">Park</option>
+					<option value="event">Event</option>
+					<option value="organization">Organization</option>
+					<option value="organizer">Organizer</option>
+					<option value="employee">Employee</option>
+				</select>
+			</h1>
 			</div>
-			<div class="exh_artworks">
-				<h3>Artworks</h3>
-					<button type="button" id="createModal_art" class="art_create btn-reg" data-toggle="modal" data-target="#modal_art">Create</button> <button id="add_art" type="button" class="btn-edit art_add">+</button>
-					<ul class="ul_art">
-					{% include "include/art_list.html" ignore missing with context %}
+			<div id="create_exhibition" class="create_div">
+				<h2>Exhibition</h2>
+				<div class="bio">
+					<h3>Bio</h3>
+					<ul>
+						<li><label for="exh_name">Name</label> <input type="text" name="exh_name"></li>
+						<li><label>Exhibition Dates</label> <input type="date" name="exh_startDate"> to <input type="date" name="exh_endDate"></li>
 					</ul>
+					<h3>Organizations</h3>
+					<button type="button" id="createModal_org" class="org_create btn__parks" data-toggle="modal" data-target="#modal_org">Create</button> <button id="add_org" type="button" class="btn__parks btn__parks--edit org_add">+</button>
+					<ul class="ul_org">
+						{% include "include/org_list.html" ignore missing with context %}
+					</ul>
+				</div>
+				<div class="exh_artworks">
+					<h3>Artworks</h3>
+						<button type="button" id="createModal_art" class="art_create btn__parks" data-toggle="modal" data-target="#modal_art">Create</button> <button id="add_art" type="button" class="btn__parks btn__parks--edit art_add">+</button>
+						<ul class="ul_art">
+						{% include "include/art_list.html" ignore missing with context %}
+						</ul>
 
+				</div>
+				<div class="install">
+					<h3>Install Details</h3>
+					<ul>
+						<li><label for="exh_installStart">Install Date(s)</label> <input type="date" name="exh_installStart"> to <input type="date" name="exh_installEnd"></li>
+					</ul>
+				</div>
+				<div class="deinstall">
+					<h3>De-Install Details</h3>
+					<ul>
+						<li><label for="exh_deinstallDate">De-Install Due Date</label> <input type="date" name="exh_deinstallDate"></li>
+					</ul>
+				</div>
 			</div>
-			<div class="install">
-				<h3>Install Details</h3>
+			<div id="create_artwork" class="create_div">
+				<h2>Artwork</h2>
+				<div class="art_bio">
+					<h3>Bio</h3>
+					<ul>
+						<li><label for="art_name">Name</label> <input type="text" name="art_name"></li>
+					</ul>
+				</div>
+				<div class="art_artists">
+					<h3>Artists</h3>
+					<button type="button" id="createModal_artist" class="artist_create btn__parks" data-toggle="modal" data-target="#modal_artist">Create</button> <button id="add_artist" type="button" class="artist_add btn__parks btn__parks--edit">+</button>
+					<ul class="ul_artist">
+						{% include "include/artist_list.html" ignore missing with context %}
+					</ul>
+				</div>
+			</div>
+			<div id="create_artist" class="create_div">
+				<h2>Artist</h2>
 				<ul>
-					<li><label for="exh_installStart">Install Date(s)</label> <input type="date" name="exh_installStart"> to <input type="date" name="exh_installEnd"></li>
+					<li>Name <input type="text" name="artist_pName" placeholder="primary/last name"> <input type="text" name="artist_fName" placeholder="first name"></li>
+					<li>Email <input type="text" name="artist_email"></li>
+					<li>Phone <input type="text" name="artist_phone"></li>
+					<li>Website  <input type="text" name="artist_website"></li>
 				</ul>
 			</div>
-			<div class="deinstall">
-				<h3>De-Install Details</h3>
+			<div id="create_park" class="create_div">
+				<h2>Park</h2>
 				<ul>
-					<li><label for="exh_deinstallDate">De-Install Due Date</label> <input type="date" name="exh_deinstallDate"></li>
+					<li>Name <input type="text" name="park_name"></li>
+					<li>Park ID <input type="text" name="park_park_id"></li>
+					<li>Borough <select id="" name="park_borough" style="border:none; border-radius: 0px; border-bottom: 2px dashed red; font-size:15px; -webkit-appearance:none; padding-left:5px;">
+						<option value="" selected disabled>Select a Borough</option>
+						<option value="Manhattan">Manhattan</option>
+						<option value="Brooklyn">Brooklyn</option>
+						<option value="Queens">Queens</option>
+						<option value="Bronx">Bronx</option>
+						<option value="Staten Island">Staten Island</option>
+						</select></li>
+					<li>Address <input type="text" name="park_address"></li>
+					<li>Community Board # <input type="text" name="park_cb"></li>
 				</ul>
 			</div>
-		</div>
-		<div id="create_artwork" class="create_div">
-			<h2>Artwork</h2>
-			<div class="art_bio">
-				<h3>Bio</h3>
+			<div id="create_organization" class="create_div">
+				<h2>Organization</h2>
 				<ul>
-					<li><label for="art_name">Name</label> <input type="text" name="art_name"></li>
+					<li>Name <input type="text" name="org_name"></li>
+					<li>Website <input type="text" name="org_website"></li>
+					<li>Phone <input type="text" name="org_phone"></li>
 				</ul>
 			</div>
-			<div class="art_artists">
-				<h3>Artists</h3>
-				<button type="button" id="createModal_artist" class="artist_create btn-reg" data-toggle="modal" data-target="#modal_artist">Create</button> <button id="add_artist" type="button" class="artist_add btn-edit">+</button>
-				<ul class="ul_artist">
-					{% include "include/artist_list.html" ignore missing with context %}
-				</ul>
+			<div class="form_submit">
+				<button type="button" class="btn__parks btn__parks--no"><a href="{{ url_for('home') }}">Cancel</a></button>
+				<!-- <button type="button" class="btn__parks btn__parks--add">Create</button> -->
+				<input type="submit" class="btn__parks btn__parks--add" value="Create" id="post_create">
 			</div>
+			</form>
 		</div>
-		<div id="create_artist" class="create_div">
-			<h2>Artist</h2>
-			<ul>
-				<li>Name <input type="text" name="artist_pName" placeholder="primary/last name"> <input type="text" name="artist_fName" placeholder="first name"></li>
-				<li>Email <input type="text" name="artist_email"></li>
-				<li>Phone <input type="text" name="artist_phone"></li>
-				<li>Website  <input type="text" name="artist_website"></li>
-			</ul>
+
+
+		<!-- Create artwork modal -->
+		<div id="modal_art" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		  <div class="modal-dialog" role="document">
+		    <div class="modal-content">
+		      <div class="modal-header bg-green">
+		        <h5 class="modal-title" id="">CREATE AN ARTWORK</h5>
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+		          <span aria-hidden="true">&times;</span>
+		        </button>
+		      </div>
+		      <div class="modal-body">
+		
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn__parks btn__parks--no post_cancel" data-dismiss="modal">Cancel</button>
+		        <button type="button" id="post_art" class="btn__parks btn__parks--add post_data">Add</button>
+		      </div>
+		    </div>
+		  </div>
 		</div>
-		<div id="create_park" class="create_div">
-			<h2>Park</h2>
-			<ul>
-				<li>Name <input type="text" name="park_name"></li>
-				<li>Park ID <input type="text" name="park_park_id"></li>
-				<li>Borough <select id="" name="park_borough" style="border:none; border-radius: 0px; border-bottom: 2px dashed red; font-size:15px; -webkit-appearance:none; padding-left:5px;">
-					<option value="" selected disabled>Select a Borough</option>
-					<option value="Manhattan">Manhattan</option>
-					<option value="Brooklyn">Brooklyn</option>
-					<option value="Queens">Queens</option>
-					<option value="Bronx">Bronx</option>
-					<option value="Staten Island">Staten Island</option>
-					</select></li>
-				<li>Address <input type="text" name="park_address"></li>
-				<li>Community Board # <input type="text" name="park_cb"></li>
-			</ul>
+
+		<!-- Create artist modal -->
+		<div id="modal_artist" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		  <div class="modal-dialog" role="document">
+		    <div class="modal-content">
+		      <div class="modal-header bg-green">
+		        <h5 class="modal-title" id="">CREATE AN ARTIST</h5>
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+		          <span aria-hidden="true">&times;</span>
+		        </button>
+		      </div>
+		      <div class="modal-body">
+
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn__parks btn__parks--no post_cancel" data-dismiss="modal">Cancel</button>
+		        <button type="button" id="post_artist" class="btn__parks btn__parks--add post_data">Add</button>
+		      </div>
+		    </div>
+		  </div>
 		</div>
-		<div id="create_organization" class="create_div">
-			<h2>Organization</h2>
-			<ul>
-				<li>Name <input type="text" name="org_name"></li>
-				<li>Website <input type="text" name="org_website"></li>
-				<li>Phone <input type="text" name="org_phone"></li>
-			</ul>
+
+		<!-- Create org modal -->
+		<div id="modal_org" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		  <div class="modal-dialog" role="document">
+		    <div class="modal-content">
+		      <div class="modal-header bg-green">
+		        <h5 class="modal-title" id="">CREATE AN ORGANIZATION</h5>
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+		          <span aria-hidden="true">&times;</span>
+		        </button>
+		      </div>
+		      <div class="modal-body">
+
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn__parks btn__parks--no post_cancel" data-dismiss="modal">Cancel</button>
+		        <button type="button" id="post_org" class="btn__parks btn__parks--add post_data">Add</button>
+		      </div>
+		    </div>
+		  </div>
 		</div>
-		<div class="form_submit">
-			<button type="button" class="btn-no"><a href="{{ url_for('home') }}">Cancel</a></button>
-			<!-- <button type="button" class="btn-add">Create</button> -->
-			<input type="submit" class="btn-add" value="Create" id="post_create">
-		</div>
-		</form>
+
 	</div>
+	<script src="{{ url_for('static', filename='js/create.js') }}"></script>
 
-
-	<!-- Create artwork modal -->
-	<div id="modal_art" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-	  <div class="modal-dialog" role="document">
-	    <div class="modal-content">
-	      <div class="modal-header bg-green">
-	        <h5 class="modal-title" id="">CREATE AN ARTWORK</h5>
-	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-	          <span aria-hidden="true">&times;</span>
-	        </button>
-	      </div>
-	      <div class="modal-body">
-	
-	      </div>
-	      <div class="modal-footer">
-	        <button type="button" class="btn-no" data-dismiss="modal">Cancel</button>
-	        <button type="button" id="post_art" class="btn-add post_data">Add</button>
-	      </div>
-	    </div>
-	  </div>
-	</div>
-
-	<!-- Create artist modal -->
-	<div id="modal_artist" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-	  <div class="modal-dialog" role="document">
-	    <div class="modal-content">
-	      <div class="modal-header bg-green">
-	        <h5 class="modal-title" id="">CREATE AN ARTIST</h5>
-	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-	          <span aria-hidden="true">&times;</span>
-	        </button>
-	      </div>
-	      <div class="modal-body">
-
-	      </div>
-	      <div class="modal-footer">
-	        <button type="button" class="btn-no" data-dismiss="modal">Cancel</button>
-	        <button type="button" id="post_artist" class="btn-add post_data">Add</button>
-	      </div>
-	    </div>
-	  </div>
-	</div>
-
-	<!-- Create org modal -->
-	<div id="modal_org" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-	  <div class="modal-dialog" role="document">
-	    <div class="modal-content">
-	      <div class="modal-header bg-green">
-	        <h5 class="modal-title" id="">CREATE AN ORGANIZATION</h5>
-	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-	          <span aria-hidden="true">&times;</span>
-	        </button>
-	      </div>
-	      <div class="modal-body">
-
-	      </div>
-	      <div class="modal-footer">
-	        <button type="button" class="btn-no" data-dismiss="modal">Cancel</button>
-	        <button type="button" id="post_org" class="btn-add post_data">Add</button>
-	      </div>
-	    </div>
-	  </div>
-	</div>
-
-</div>
-<script src="{{ url_for('static', filename='js/create.js') }}"></script>
-</body>
-</html>
+{% endblock %}
