--- a/templates/home.html
+++ b/templates/home.html
@@ -1,51 +1,85 @@
+{% extends "layout.html" %}
 {% from "_macros.html" import nav %}
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>NYC Parks Database</title>
-	<script src="https://code.jquery.com/jquery-3.3.1.js"
-	  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-	  crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+{% block title %}NYC Parks Database{% endblock %}
+{% block content %}
 
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-</head>
-<body>
-<div class='container'>
-	<h1>NYC PARKS</h1>
 	{{ nav() }}
-	<div class='exhibitions'>
-		<h2>Exhibitions</h2>
-		{% for x in exhibitions %}
-		{% if x %}
-		<h3><a href="{{ url_for('exhibition', exhibition_id=x.id) }}">{{ x.name }}</a></h3>
-		<ul>
-			<li>ID: {{ x.id }}</li>
-			<li>Exhibition Dates: {{ x.startDate }} to {{ x.endDate }}</li>
-			<li>Install Date(s): {{ x.installStart }}{%if x.installEnd %} to {{ x.installEnd }}{% endif %}</li>
-			<li>De-Install Due Date: {{ x.deinstallDate }}</li>
-		</ul>
-		{% endif %}
-		{% endfor %}
+	<div class="container-fluid head">
+		<div class="row justify-content-center">
+			<div class="col-sm-12 col-md-8">
+				<h1 class="text-center display-3"><b>NYC PARKS</b></h1>
+			</div>
+		</div>
 	</div>
-	<div class='parks'>
-		<h2>Parks</h2>
-		{% for p in parks %}
-		{% if p %}
-		<h3><a href="{{ url_for('park', park_id=p.id) }}">{{ p.name }}</a></h3>
-		<ul>
-			<li>ID: {{ p.id }}</li>
-			<li>Park ID: {{ p.park_id }}</li>
-			<li>Borough: {{ p.borough }}</li>
-			<li>Address: {{ p.address }}</li>
-			<li>Community Board: {{ p.cb }}</li>
-		</ul>
-		{% endif %}
-		{% endfor %}
-	</div>
-</div>
-</body>
-</html>
+	<section id="section--featured">
+		<div class="container-fluid exhibitions">
+			<div class="row pt-4 pb-3">
+				<div class="col-md-4 order-1 order-md-2">
+					<h3 class="text-center pb-3">Today</h3>
+					<ul>
+						<li>item 1</li>
+						<li>item 2</li>
+						<li>item 3</li>
+					</ul>
+				</div>
+				<div class="col-md-4 order-2 order-md-3">
+					<h3 class="text-center pb-3">Upcoming</h3>
+					<ul>
+						<li>item 1</li>
+						<li>item 2</li>
+						<li>item 3</li>
+					</ul>
+				</div>
+				<div class="col-md-4 order-3 order-md-1">
+					<h3 class="text-center pb-3">Active</h3>
+					<ul>
+						<li>item 1</li>
+						<li>item 2</li>
+						<li>item 3</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="section--exhibitions">
+		<div class="container-fluid exhibitions">
+				<h2 class="text-center display-4 p-4">Exhibitions</h2>
+			{% if exhibitions %}
+			{% for x in exhibitions %}
+				<div class="row">
+					<div class="col">
+						<h3><a href="{{ url_for('exhibition', exhibition_id=x.id) }}">{{ x.name }}</a></h3>
+						<ul>
+							<li>ID: {{ x.id }}</li>
+							<li>Exhibition Dates: {{ x.startDate }} to {{ x.endDate }}</li>
+							<li>Install Date(s): {{ x.installStart }}{%if x.installEnd %} to {{ x.installEnd }}{% endif %}</li>
+							<li>De-Install Due Date: {{ x.deinstallDate }}</li>
+						</ul>
+					</div>
+				</div>
+			{% endfor %}
+			{% endif %}
+		</div>
+	</section>
+	<section id="section--parks">
+		<div class="container-fluid parks">
+			<h2 class="text-center display-4 p-4">Parks</h2>
+			{% if parks %}
+			{% for p in parks %}
+			<div class="row">
+				<div class="col">
+					<h3><a href="{{ url_for('park', park_id=p.id) }}">{{ p.name }}</a></h3>
+					<ul>
+						<li>ID: {{ p.id }}</li>
+						<li>Park ID: {{ p.park_id }}</li>
+						<li>Borough: {{ p.borough }}</li>
+						<li>Address: {{ p.address }}</li>
+						<li>Community Board: {{ p.cb }}</li>
+					</ul>
+				</div>
+			</div>
+			{% endfor %}
+			{% endif %}
+		</div>
+	</section>
+{% endblock %}
