--- a/templates/artworks.html
+++ b/templates/artworks.html
@@ -1,45 +1,44 @@
+{% extends "layout.html" %}
 {% from "_macros.html" import nav %}
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>Artworks</title>
-	<script src="https://code.jquery.com/jquery-3.3.1.js"
-	  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-	  crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+{% block title %}NYC Parks Database — Artworks{% endblock %}
+{% block content %}
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-</head>
-<body>
-<div class="container">
-	<h1>ARTWORKS</h1>
 	{{ nav() }}
-	<div class="artworks">
-		{% if artworks %}
-		{% for x in artworks %}
-		<h2><a href="{{ url_for('artwork', artwork_id=x.id) }}">{{ x.name }}</a></h2>
-		<ul>
-			<li>ID: {{ x.id }}</li>
-			{% if x.creators %}
-			<li>Artist(s):
-				<ul>
-					{% for creator in x.creators %}
-					<li><a href="{{ url_for('artist', artist_id=creator.id) }}">{% if creator.fName %}{{ creator.fName }} {% endif %}{{ creator.pName }}</a></li>
+	<div class="container-fluid">
+		<section id="section--head">
+			<div class="row justify-content-center head">
+				<div class="col-sm-12 col-md-8">
+					<h1 class="text-center display-3"><b>ARTWORKS</b></h1>
+				</div>
+			</div>
+		</section>
+		<section id="section--art">
+			<div class="row justify-content-center">
+				<div class="col-sm-12 col-md-8">
+					{% if artworks %}
+					{% for x in artworks %}
+						<h2><a href="{{ url_for('artwork', artwork_id=x.id) }}">{{ x.name }}</a></h2>
+						<ul>
+							<li>ID: {{ x.id }}</li>
+							<li>Artists:
+								<ul>
+									{% if x.creators.count() > 0 %}
+									{% for creator in x.creators %}
+										<li><a href="{{ url_for('artist', artist_id=creator.id) }}">{% if creator.fName %}{{ creator.fName }} {% endif %}{{ creator.pName }}</a></li>
+									{% endfor %}
+									{% else %}
+									<li><i>This artwork doesn't have any artists yet.</i></li>
+									{% endif %}
+								</ul>
+							</li>
+						</ul>
 					{% endfor %}
-				</ul>
-			</li>
-			{% else %}
-			<p><i>This artwork doesn't have any artists yet.</i></p>
-			{% endif %}
-		</ul>
-		{% endfor %}
-		{% else %}
-		<p><i>There are no artworks in the database.</i></p>
-		{% endif %}
+					{% else %}
+					<p><i>There are no artworks in the database.</i></p>
+					{% endif %}
+				</div>
+			</div>
+		</section>
 	</div>
-</div>
-</body>
-</html>
+
+{% endblock %}
