--- a/templates/exhibitions.html
+++ b/templates/exhibitions.html
@@ -1,35 +1,34 @@
+{% extends "layout.html" %}
 {% from "_macros.html" import nav %}
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>Exhibitions</title>
-	<script src="https://code.jquery.com/jquery-3.3.1.js"
-	  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-	  crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-	
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-</head>
-<body>
-<div class="container">
-	<h1>EXHIBITIONS</h1>
+{% block title %}NYC Parks Database – Artists{% endblock %}
+{% block content %}
+
 	{{ nav() }}
-	<div class='exhibitions'>
-		{% if exhibitions %}
-		{% for x in exhibitions %}
-		<h2><a href="{{ url_for('exhibition', exhibition_id=x.id) }}">{{ x.name }}</a></h2>
-		<ul>
-			<li>ID: {{ x.id }}</li>
-			<li>Exhibition Dates: {{ x.startDate }} to {{ x.endDate }}</li>
-			<li>Install Date(s): {{ x.installStart }}{%if x.installEnd %} to {{ x.installEnd }}{% endif %}</li>
-			<li>De-Install Due Date: {{ x.deinstallDate }}</li>
-		</ul>
-		{% endfor %}
-		{% endif %}
+	<div class="container-fluid">
+		<section id="section--head">
+			<div class="row justify-content-center head">
+				<div class="col-sm-12 col-md-8">
+					<h1 class="text-center display-3"><b>EXHIBITIONS</b></h1>
+				</div>
+			</div>
+		</section>
+		<section id="section--exhibitions">
+			<div class="row justify-content-center">
+				<div class="col-sm-12 col-md-8">
+					{% if exhibitions %}
+					{% for x in exhibitions %}
+						<h2 class="text-center display-4 p-4"><a href="{{ url_for('exhibition', exhibition_id=x.id) }}">{{ x.name }}</a></h2>
+						<ul>
+							<li>ID: {{ x.id }}</li>
+							<li>Exhibition Dates: {{ x.startDate }} to {{ x.endDate }}</li>
+							<li>Install Date(s): {{ x.installStart }}{%if x.installEnd %} to {{ x.installEnd }}{% endif %}</li>
+							<li>De-Install Due Date: {{ x.deinstallDate }}</li>
+						</ul>
+					{% endfor %}
+					{% endif %}
+				</div>
+			</div>
+		</section>
 	</div>
-</div>
-</body>
-</html>
+
+{% endblock %}
