--- a/templates/orgs.html
+++ b/templates/orgs.html
@@ -1,36 +1,34 @@
+{% extends "layout.html" %}
 {% from "_macros.html" import nav %}
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>Organizations</title>
-	<script src="https://code.jquery.com/jquery-3.3.1.js"
-	  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-	  crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+{% block title %}NYC Parks Database – Organizations{% endblock %}
+{% block content %}
 
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-</head>
-<body>
-<div class='container'>
-	<h1>ORGANIZATIONS</h1>
 	{{ nav() }}
-	<div class='orgs'>
-		{% if orgs %}
-		{% for org in orgs %}
-		<h2><a href="{{ url_for('org', organization_id=org.id) }}">{{ org.name }}</a></h2>
-		<ul>
-			<li>ID: {{ org.id }}</li>
-			<li>Website: <a href="http://{{org.website}}" target="_blank">{{ org.website }}</a></li>
-			<li>Phone: {{ org.phone }}</li>
-		</ul>
-		{% endfor %}
-		{% else %}
-		<p><i>There are no organizations in the database.</i></p>
-		{% endif %}
-	</div>
-</div>
-</body>
-</html>
+	<div class="container-fluid">
+		<section id="section--head">
+			<div class="row justify-content-center head">
+				<div class="col-sm-12 col-md-8">	
+					<h1 class="text-center display-3"><b>ORGANIZATIONS</b></h1>
+				</div>
+			</div>
+		</section>
+		<section id="section--orgs">
+			<div class="row justify-content-center">
+				<div class="col-sm-12 col-md-8">
+					{% if orgs %}
+						{% for org in orgs %}
+							<h2 class="text-center display-4 p-4"><a href="{{ url_for('org', organization_id=org.id) }}">{{ org.name }}</a></h2>
+							<ul>
+								<li>ID: {{ org.id }}</li>
+								<li>Website: <a href="http://{{org.website}}" target="_blank">{{ org.website }}</a></li>
+								<li>Phone: {{ org.phone }}</li>
+							</ul>
+						{% endfor %}
+					{% else %}
+						<p><i>There are no organizations in the database.</i></p>
+					{% endif %}
+				</div>
+			</div>
+		</section>
+
+{% endblock %}
